--- a/style/menu.css
+++ b/style/menu.css
@@ -12,16 +12,18 @@ body {
   width: 40%;
   margin: auto;
   border-radius: 60px;
-  padding: 10px 240px;
+  padding: 5% 15%;
 }
 #svgcontent {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
 }
 #svgcontent svg {
-  width: 60px;
-  height: 50px;
+  width: 50px;
+  height: 40px;
 }
 #sec2 header {
   text-align: center;
