--- a/style/page1.css
+++ b/style/page1.css
@@ -60,7 +60,7 @@ button {
   height: 500px;object-fit: cover; 
 } */
 #divcover {
-  background-image: url(https://placehold.co/300x300);
+  background-image: url(/image/im5.jpg);
   height: 400px;
   background-size: cover;
   /* width: 2900px; */
