--- a/style/menu.css
+++ b/style/menu.css
@@ -33,22 +33,19 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  /* grid-template-areas:
-      "imgg imggg imgg"
-      "imgg imgg textt"
-      "imggg imgg textt" !important; */
   gap: 20px 80px;
 }
 #menu1 img {
-  /* grid-area: imgg; */
-  /* width: 400px; */
   height: 400px;
   border-radius: 50px;
-  /* margin-right: 70px; */
-  /* margin-left: 40px; */
 }
-#divmenu1 {
-  /* grid-area: textt; */
+#menu1 img:nth-child(odd) {
+  height: 500px;
+}
+#menu1 img:hover {
+  /* opacity: 0.8; */
+  transform: scale(0.8);
+  box-shadow: #99e54d 10px 10px 30px;
 }
 
 #divmenu1 p:nth-child(odd) {
@@ -58,63 +55,106 @@ body {
 
 /*  */
 #divcover {
-  background-image: url(https://placehold.co/300x300);
+  background-image: url(/image/im5.jpg);
+  background-size: cover;
   background-repeat: no-repeat;
 }
+
+#div2cover {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+#arc4 {
+  height: 200px;
+  margin-left: 400px;
+}
+#arc4 svg {
+  height: 100px;
+  width: 200px;
+}
+.introtext {
+  display: flex;
+  align-items: center;
+}
+
 #divcover,
 #div2cover {
-  /* height: 400px; */
   margin: auto;
-
+  margin-top: 3%;
   background-size: contain;
-  /* width: 200px;
-  height: 300px; */
   background-size: 700px 950px;
   background-size: cover;
-  width: 50%;
-  height: 60%;
+  width: 70%;
+  height: 500px;
   border: 2px solid;
   border-radius: 50px;
   color: rgb(27, 25, 25);
   resize: both;
-  /* overflow: scroll; */
   padding: 50px;
-  overflow-y: scroll;
-
-  /* object-fit: cover; */
 }
 #circle {
   width: 200px;
   height: 200px;
   text-align: center;
   border-radius: 50%;
-  /* text-align: center; */
   background-color: #99e54d;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* display: block; */
 }
 span {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 40px;
   font-weight: bold;
-  /* display: block; */
 }
 h1 {
   font-size: 50px;
   font-family: "Lucida sans-serif";
 }
-
+#divcover h1,
+#divcover h2 {
+  color: white;
+  width: 400px;
+  margin-bottom: 7px;
+}
 input[type="button"] {
   padding: 20px 50px;
   background-color: #f1ae0e;
   border: 0;
   border-radius: 30px;
+  cursor: pointer;
 }
 footer {
+  margin-top: 1%;
   text-align: center;
-  background-color: lightslategray;
+  background-color: #99e54d;
   padding: 20px;
+}
+
+@media screen and (max-width: 800px) {
+  #menu1 img {
+    height: 250px;
+  }
+  #arc4 {
+    display: none;
+  }
+}
+@media screen and (max-width: 1030px) {
+  .inn {
+    display: none;
+  }
+  #arc4 svg {
+    padding: 30px;
+  }
+  body {
+    background-color: tomato;
+  }
+}
+@media screen and (max-width: 1835px) {
+  .introtext {
+    position: relative;
+    bottom: 400px;
+  }
 }
