--- a/style/custOrder.css
+++ b/style/custOrder.css
@@ -6,65 +6,63 @@ body {
   color: white;
 }
 button {
-  background-color: #99e54d;
   border: 0;
 }
 button:hover {
-  background-color: #f1ae0e;
+  text-decoration: underline overline;
+  color: white;
 }
 #yourCart {
   background-color: #f1ae0e;
 }
 #main {
   display: grid;
-  grid-template-columns: 600px auto auto;
+  width: 100%;
+  grid-template-columns: repeat(auto-fill, 1fr);
+  /* 600px auto auto; */
   grid-template-areas:
     "leftSec centerSec rightSec"
-    "leftSec centerSec rightSec"
-    "leftSec centerSec rightSec"
-    "leftSec centerSec rightSec";
+    "leftSec centerSec "
+    "leftSec centerSec "
+    "leftSec centerSec ";
   grid-gap: 10px;
+  flex-wrap: wrap;
+  grid-template-rows: 1fr !important;
+  grid-template-columns: 1fr !important;
 }
 #leftSection {
   grid-area: leftSec;
   display: flex;
-  flex-direction: column;
-  /* align-items: start; */
-  /* align-content: center; */
+  justify-content: space-between;
 }
 
 #centerSection {
   grid-area: centerSec;
-  /* display: flex;
-    align-items: center; */
   grid-template-columns: 1fr;
 }
 #rightSection {
   grid-area: rightSec;
-}
-#addRem {
-  display: flex;
-  height: 30px;
-  flex-direction: row;
-  align-items: start;
+  position: relative;
+  top: 30px;
 }
 .m {
-  padding: 30px 45%;
+  /* padding: 30px 45%; */
+  background-color: black;
+  color: #f1ae0e;
   padding-left: 0;
-  /* width: 100%; */
+  cursor: pointer;
   font-size: 1.6rem;
   font-weight: bold;
   text-align: left;
   align-self: flex-start;
-  /* margin-left: 50px; */
+  margin: 30px;
+  flex: 1;
+  flex-basis: 50%;
 }
 .imf {
-  width: 200px;
+  width: 400px;
   border-radius: 40px;
   margin-right: 10%;
-}
-section {
-  /* text-align: center; */
 }
 table {
   position: fixed;
@@ -74,12 +72,12 @@ table {
   text-align: center;
 }
 #default {
-  /* text-align: center; */
   display: none;
 }
 #ccart {
   text-align: center;
   margin: auto;
+  width: 400px;
 }
 #yourCart {
   padding: 20px;
@@ -88,6 +86,7 @@ table {
   color: black;
 }
 p {
+  padding-bottom: 30px;
 }
 #centerSection button,
 #noCart p {
@@ -106,9 +105,11 @@ p {
 #centerSection button:active {
   background-color: #f1ae0e;
 }
-section {
-  /* display: block; */
-}
 #noCart {
   text-align: center;
+}
+@media screen and (max-width: 1835px) {
+  #main {
+    grid-template-columns: repeat(2, 40%);
+  }
 }
