--- a/style/reservation.css
+++ b/style/reservation.css
@@ -10,11 +10,14 @@ h1 {
   position: relative;
   top: 60px;
 }
-label {
+h2 {
+  color: #99e54d;
 }
 input[type="text"],
 input[type="number"],
-input[type="date"] {
+input[type="date"],
+input[type="submit"],
+button {
   width: 80%;
   padding: 30px 20px;
   margin: 8px 0;
@@ -23,12 +26,14 @@ input[type="date"] {
   border-radius: 4px;
   box-sizing: border-box;
   font-size: 20px;
+  background-color: rgb(0, 0, 0);
+  color: white;
 }
 #main {
   width: 60%;
   margin: auto;
-  margin-top: 10%;
-  box-shadow: #f1ae0e 10px 10px 20px;
+  margin-top: 7%;
+  box-shadow: #f1ae0e 10px 10px 20px inset, #99e54d 10px 10px 20px;
   text-align: center;
 }
 #rad {
