--- a/style/custOrder.css
+++ b/style/custOrder.css
@@ -82,7 +82,7 @@ p {
   margin-left: 30px;
   font-family: 'Montserrat', sans-serif;
   font-style: italic;
-  color: #f1ae0e;
+  color: #fffefa;
 }
 #centerSection button {
   background-color: #f1ae0e;
