--- a/CSS/web.css
+++ b/CSS/web.css
@@ -1,14 +1,14 @@
 /* Start Global */
-* {
+/* * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
+} */
 .container {
   width: 1200px;
   margin: auto;
 }
-ul {
+.links {
   list-style: none;
   padding: 0;
   margin: 0;
